implemented some of Aurelio's comments

--- a/bib/results.bib
+++ b/bib/results.bib
@@ -1,3 +1,21 @@
+@article{Aad:2013cea,
+      author         = "Aad, Georges and others",
+      title          = "{Measurement of the top quark pair production charge
+                        asymmetry in proton-proton collisions at $\sqrt{s}$ = 7
+                        TeV using the ATLAS detector}",
+      collaboration  = "ATLAS Collaboration",
+      journal        = "JHEP",
+      volume         = "1402",
+      pages          = "107",
+      doi            = "10.1007/JHEP02(2014)107",
+      year           = "2014",
+      eprint         = "1311.6724",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2013-177",
+      SLACcitation   = "%%CITATION = ARXIV:1311.6724;%%",
+}
+
 @article{AguilarSaavedra:2011ci,
       author         = "Aguilar-Saavedra, J.A. and Perez-Victoria, M.",
       title          = "{Shaping the top asymmetry}",
