--- a/tex/results.tex
+++ b/tex/results.tex
@@ -1,24 +1,34 @@
 \chapter{Results}
 \label{sec:results}
 
+This section presents the unfolded \ac{} measurements at \seventev{}
+and eighttev{}, both inclusive and differential in bins of \mtt{},
+\pttt{} and \ytt{}. The results from data at \seventev{} have been
+published on the Journal of High Energy Physics~\cite{Aad:2013cea},
+while the \eighttev{} ones are internal results reported here for the
+purpose of this thesis. The publication results are being finalized
+and are expected before the end of 2014. 
 
 \section{\ac{} measurements at \seventev{}}
 \label{sec:res7tev}
 
 The measurements are performed in the $\ell{}+\ge4$ jets sample with at least 1
 $b$--jet. The observed \dy{} distribution in data and the background
-predictions used as input for the inclusive measurement are shown in
+predictions used as input for the inclusive measurement is shown in
 Fig.~\ref{fig:dy7tev}.
 
 \begin{figure}[!htb]\centering
   \includegraphics[width=0.6\textwidth]{figures/results/dy7tev} 
-  \caption{}
+  \caption{Observed \dy{} distributions for the $\ell{}+\ge4$ jets
+    sample with at least 1 $b$--jet. Data (dots) and SM expectations
+    (solid lines) are shown. The uncertainty on the total prediction
+    includes both the statistical and the systematic components.}
   \label{fig:dy7tev}
 \end{figure}
 
 The asymmetry \ac{} in \ttbar{} production at \seventev{} is measured to be
 $\ac{}= 0.006\pm0.010$, compatible with the SM prediction
-$\ac{}=0.0123\pm0.0005$.
+$\ac{}=0.0123\pm0.0005$ (see Sec.~\ref{sec:topca}).
 Table~\ref{tab:results} summarizes the
 measurements and predictions for the inclusive asymmetry, at high
 invariant mass of the top quark pair ($\mtt{} >600 \GeV{})$, and at
@@ -51,8 +61,9 @@ marginalization.
 For each source of uncertainty, the background templates and
 response matrix corresponding to $\pm1\sigma$ variation are
 considered. 
-Table~\ref{tab:systematics} shows the average variations in the
-asymmetry computed as $|\ac{}(+1\sigma)-\ac{}(-1\sigma)|/2$.
+Table~\ref{tab:systematics} shows the average asymmetry variations in the
+asymmetry computed, for each source of uncertainty, as
+$|\ac{}(+1\sigma)-\ac{}(-1\sigma)|/2$. 
 While the precision is dominated by the statistical uncertainty, the
 sources of largest systematic uncertainties are the ones with a large
 impact on the size of the \wjets{} background, such as the
@@ -85,7 +96,8 @@ Statistical uncertainty                          & $0.010$ & $0.021$ & $0.017$\\
 \end{tabular}
 \caption{Impact of individual sources of uncertainty on the measured
   \ac{} and $\ac{}(\mtt{}>600 \GeV{})$. Variations below $10\%$ of the
-  statistical uncertainty are considered negligible.}
+  statistical uncertainty are quoted as $<0.001$ and $<0.002$ are
+  considered negligible.}
 \label{tab:systematics}
 \end{table}
 
@@ -114,7 +126,9 @@ Tevatron experiments.
   } \quad
   \subfloat[][]
   {  \includegraphics[width=0.45\textwidth]{figures/results/dy_mtt_beta} }
-  \caption{Measured \ac{} spectra compared with SM and bSM predictions
+  \caption{Measured \ac{} spectra compared with predictions for SM and
+    for a color--octet axigluon with a mass of 300 GeV (red lines) and
+    7000 GeV (blue lines) 
     as functions of \mtt{} (a), \pttt{} (b) and \ytt{} (c). The
     asymmetry as a function of \mtt{} with $\betatt{}>0.6$ is also
     shown (d).}
@@ -141,8 +155,8 @@ A comparison of the inclusive \ac{} measurements, together with the Tevatron
 \ac{} and \afb{} measurements, inclusive and at high \mtt{} mass,
 define a region where the new physics prediction are compatible with
 the current measurements from both Tevatron and LHC experiments.
-Some models show only a limited range of parameter values which yield acceptable
-asymmetries.
+Some models show only a limited range of parameter values which yield
+acceptable asymmetries.
 
 \begin{figure}[!htb]
   \centering
@@ -166,8 +180,8 @@ asymmetries.
 \label{sec:res8tev}
 
 The measurements at \eighttev{} are performed using six sub-samples of
-$\ell{}+\ge4$ jets events, where, simultaneously, the background normalizations are
-fitted and the parton--level \dy{} distribution is
+$\ell{}+\ge4$ jets events, where, simultaneously, the background
+normalizations are fitted and the parton--level \dy{} distribution is
 estimated. Fig.~\ref{fig:dy7tev} shows the fitted distribution used
 for the inclusive \ac{} measurement compared with the observed one. 
 
@@ -195,8 +209,8 @@ Table~\ref{tab:8tevsystematics} shows the average asymmetry variation
 $\delta{\ac{}}$ computed, for each source of uncertainty, as
 $|\ac{}(+1\sigma)-\ac{}(-1\sigma)|/2$.
 As in the measurements at \seventev{}, the precision is dominated by
-the statistical uncertainty, and the sources of largest systematic
-uncertainties are the ones with a large impact on the size of the
+the statistical uncertainty, and the main sources of systematic
+uncertainty are the ones with a large impact on the size of the
 \wjets{} background, such as the uncertainty on the energy scale and
 resolution of lepton and jets. 
 
@@ -226,7 +240,7 @@ Total uncertainty                                   & $0.005$ \\
 \end{tabular}
 \caption{Expected impact of individual sources of uncertainty on the
   measured \ac{}. Variations below $10\%$ of the
-  statistical uncertainty are considered negligible.}
+  statistical uncertainty are quoted as $<0.0005$ and considered negligible.}
 \label{tab:8tevsystematics}
 \end{table}
 
